--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@types/react-native-snap-carousel": "^3.8.10",
+    "axios": "^1.6.7",
     "expo": "^50.0.8",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
