--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/drawer": "^6.6.13",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.24",
     "@types/react-native-snap-carousel": "^3.8.10",
     "axios": "^1.6.7",
     "expo": "^50.0.8",
@@ -21,8 +22,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
