--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^50.0.8",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
