update MovieScreen, appNavigation
thêm director trong MovieScreen, chỉnh sửa Drawer

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.24",
     "@types/react-native-snap-carousel": "^3.8.10",
     "axios": "^1.6.7",
+    "bcrypt-react-native": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "expo": "^50.0.8",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
@@ -23,6 +25,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-progress": "^5.0.1",
