--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/drawer": "^6.6.13",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.24",
@@ -19,7 +20,7 @@
     "expo": "^50.0.8",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.8.1",
+    "firebase": "^10.9.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
@@ -32,8 +33,15 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "14.1.0"
+    "react-native-svg": "14.1.0",
+    "expo-auth-session": "~5.4.0",
+    "expo-crypto": "~12.8.1",
+    "expo-web-browser": "~12.8.2",
+    "expo-application": "~5.8.3",
+    "expo-dev-client": "~3.3.11",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
