--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-auth-session": "~5.4.0",
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.11",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
@@ -35,14 +36,14 @@
     "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "14.1.0",
-    "expo-image-picker": "~14.7.1"
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
