--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/drawer": "^6.6.13",
     "@react-navigation/native": "^6.1.15",
